2005-11-08  Sebastien Pouliot  <sebastien@ximian.com>

	* CodeExpressionCollectionTest.cs: Added test case for AddRange(self).
	* CodeStatementCollectionTest.cs: Added test case for AddRange(self).
	* CodeTypeReferenceCollectionTest.cs: Added test case for 
	AddRange(self).

2005-11-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* CodeExpressionCollectionTest.cs: Added tests for ctors and AddRange
	changes made in r52579.
	* CodeParameterDeclarationExpressionCollectionTest.cs: same.
	* CodeTypeReferenceCollectionTest.cs: same.

2005-11-07  Sebastien Pouliot  <sebastien@ximian.com>

	* CodeMethodInvokeExpressionTest.cs: Fixed some failures on 2.0 
	tests.

2005-11-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* CodeTypeReferenceExpressionTest.cs: Added tests.
	* CodeVariableDeclarationStatementTest.cs: Added tests.
	* CodePropertyReferenceExpressionTest.cs: Added tests.
	* CodeNamespaceImportTest.cs: Added tests.
	* CodeTypeConstructorTest.cs: Added tests.
	* CodeSnippetExpressionTest.cs: Added tests.
	* CodeParameterDeclarationExpressionTest.cs: Added tests.
	* CodeObjectCreateExpressionTest.cs: Added tests.
	* CodeTypeDelegateTest.cs: Set eol-style to native.
	* CodeLabeledStatementTest.cs: Added tests.
	* CodeConstructorTest.cs: Added tests.
	* CodeTypeOfExpressionTest.cs: Added tests.
	* CodeGotoStatementTest.cs: Added tests.
	* CodeCastExpressionTest.cs: Added tests.
	* CodeMemberFieldTest.cs: Set eol-style to native.
	* CodeMethodInvokeExpressionTest.cs: Added tests.
	* CodeEventReferenceExpressionTest.cs: Added tests.
	* CodeChecksumPragmaTest.cs: Added tests.
	* CodeSnippetCompileUnitTest.cs: Added tests.
	* CodeNamespaceTest.cs: Added tests.
	* CodeSnippetStatementTest.cs: Added tests.
	* CodeMemberMethodTest.cs: Added tests.
	* CodeMemberPropertyTest.cs: Set eol-style to native.
	* CodeCatchClauseTest.cs: Added tests.
	* CodeStatementCollectionTest.cs: Added tests.
	* CodeRegionDirectiveTest.cs: Added tests.